GS-12665 changing the module to support correct spacing

--- a/src/webapp/res/mobile/css/02_module/mod_skins.css
+++ b/src/webapp/res/mobile/css/02_module/mod_skins.css
@@ -61,7 +61,7 @@ Example:
 
 /* Module 6 - blue gradient header white content area
 -----------------------------------------------------------------------------*/
-.standard_6-1{ margin-top: 20px;}
+.standard_6-1{ margin-top: 0px;}
 .standard_6-1 .inner{
 }
 .standard_6-1 .hd{
